# speech-lyt

./: .gitignore  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 38ef14894904_initial_schema.py  667538694976_add_projects_table.py  7e9f72673bcc_add_agents_table.py  a1b2c3d4e5f6_add_users_table.py  b2c3d4e5f6a7_add_qa_tables.py  c3d4e5f6a7b8_add_alert_tables.py  d4e5f6a7b8c9_add_organization_team_callkpi.py  e5f6a7b8c9d0_add_integration_configs.py  f6a7b8c9d0e1_add_ai_agents.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/integrations/: __init__.py  base.py  registry.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  agent.py  ai_agent.py  alert.py  api_key.py  audit_log.py  base.py  call.py  call_kpi.py  coaching.py  emotion.py  integration_config.py  manager.py  organization.py  project.py  qa.py  script.py  summary.py  team.py  transcription.py  user.py  webhook.py
backend/app/schemas/: agent.py  ai_agent.py  alert.py  api_key.py  call.py  emotion.py  integration.py  kpi.py  manager.py  organization.py  project.py  qa.py  report.py  script.py  summary.py  team.py  user.py  webhook.py
backend/app/scripts/: seed_demo.py  seed_qa_coaching.py
backend/tests/: conftest.py  test_excel_export.py  test_health.py  test_integration_registry.py  test_integrations_api.py  test_models.py  test_pdf_export.py  test_reports_api.py  test_schemas.py
frontend/: Dockerfile  (+2 more)
(+145 files in other folders)
