[tool.poetry]
name = "speechlyt-backend"
version = "0.1.0"
description = "SpeechLyt - AI-powered speech analytics platform for call centers"
authors = ["SpeechLyt Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
openai = "^1.60.0"
httpx = "^0.28.0"
python-multipart = "^0.0.19"
boto3 = "^1.36.0"
elasticsearch = "^8.17.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^9.0.0"
openpyxl = "^3.1.0"
reportlab = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.9.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
